# imgui-timeline

./: .gitignore  CMakeLists.txt  README.md  build_app.sh  imgui.ini
addon/: CMakeLists.txt
addon/src/: imgui_timeline.cpp  imgui_timeline.h
demo/: CMakeLists.txt
demo/cmake/: DetectHostOS.cmake  ImGuiHelpers.cmake
demo/src/: main.cpp  main_metal.mm
libs/: README.md
